# fastapi-crud-w-auth

./: .env  DockerRunCommands.txt  Dockerfile  pyproject.toml
crud_project/: app.py  server.py
crud_project/config/: index.py
crud_project/controllers/: auth_controller.py  user_controller.py
crud_project/models/: User.py
crud_project/routes/: auth_routes.py  user_routes.py
crud_project/security/: jwt.py
crud_project/utils/: password.py
